fix(frontend): ensured icons are visible on white background

--- a/frontend/src/app/shared/form/oib-form-array/oib-array.component.scss
+++ b/frontend/src/app/shared/form/oib-form-array/oib-array.component.scss
@@ -17,6 +17,9 @@
 
 .oib-fake-table {
   align-items: center;
+  .btn-link {
+    color: $blue;
+  }
 }
 
 .oib-fake-table:hover {
